Adds `is_active` parameter to get users list API documentation.
